k8/manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: go-web-service
  labels: 
    app: go-service-label
spec: 
  type: LoadBalancer
  ports: 
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: go-pod-label
