k8/manifests/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules:
  - host: go-web-app.local
    http: 
      paths:
      - path: /
        pathType: prefix
        backend:
          service:
            name: go-web-service
            port:
              number: 80
